name:                godel-checker
version:             0.1.0.0
synopsis:            Godel checker.
description:         Godel checker.
license:             BSD3
license-file:        LICENSE
author:              Julien Lange, Bernardo Toninho
maintainer:          j.s.lange@kent.ac.uk, btoninho@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Godel
  main-is:             Godel.hs
  other-extensions:    DeriveDataTypeable, BangPatterns, DeriveFoldable, DeriveTraversable, FlexibleInstances, FlexibleContexts
  build-depends:       ansi-terminal >=0.6 && <0.7, base >=4.9 && <4.10, cmdargs >=0.10 && <0.11, containers >=0.5 && <0.6, filepath >=1.4 && <1.5, process >=1.4 && <1.5, text >=1.2 && <1.3, transformers >=0.5 && <0.6, parsec >=3.1 && <3.2, pretty >=1.1 && <1.2
  default-language:    Haskell2010
